Implementation of the character template and sheet, and first auto-calculating statistic (HEA).

--- a/styles/hg2e.css
+++ b/styles/hg2e.css
@@ -170,6 +170,12 @@
     text-align: center;
 }
 
+.heavygear2e .attribute-group input:disabled {
+    width: 40px;
+    text-align: center;
+    background-color: #ccc;
+}
+
 .heavygear2e .secondary-trait {
     margin-top: 2px;
     padding-top: 2px;
