--- a/templates/actors/character-sheet.html
+++ b/templates/actors/character-sheet.html
@@ -93,7 +93,7 @@
                             </div>
                             <div class="attribute-group">
                                 <label>HEA</label>
-                                <input type="number" name="system.secondary_traits.HEA.value" value="{{system.secondary_traits.HEA.value}}" />
+                                <input type="number" disabled name="system.secondary_traits.HEA.value" value="{{system.secondary_traits.HEA.value}}" />
                             </div>
                             <div class="attribute-group">
                                 <label>STA</label>
