Secondary attributes implemented, minus skills (placeholders in place).

--- a/templates/actors/character-sheet.html
+++ b/templates/actors/character-sheet.html
@@ -89,7 +89,7 @@
                         <div class="attributes-grid">
                             <div class="attribute-group">
                                 <label>STR</label>
-                                <input type="number" name="system.secondary_traits.STR.value" value="{{system.secondary_traits.STR.value}}" />
+                                <input type="number" disabled name="system.secondary_traits.STR.value" value="{{system.secondary_traits.STR.value}}" />
                             </div>
                             <div class="attribute-group">
                                 <label>HEA</label>
@@ -97,15 +97,15 @@
                             </div>
                             <div class="attribute-group">
                                 <label>STA</label>
-                                <input type="number" name="system.secondary_traits.STA.value" value="{{system.secondary_traits.STA.value}}" />
+                                <input type="number" disabled name="system.secondary_traits.STA.value" value="{{system.secondary_traits.STA.value}}" />
                             </div>
                             <div class="attribute-group">
                                 <label>UD</label>
-                                <input type="number" name="system.secondary_traits.UD.value" value="{{system.secondary_traits.UD.value}}" />
+                                <input type="number" disabled name="system.secondary_traits.UD.value" value="{{system.secondary_traits.UD.value}}" />
                             </div>
                             <div class="attribute-group">
                                 <label>AD</label>
-                                <input type="number" name="system.secondary_traits.AD.value" value="{{system.secondary_traits.AD.value}}" />
+                                <input type="number" disabled name="system.secondary_traits.AD.value" value="{{system.secondary_traits.AD.value}}" />
                             </div>
                         </div>
                     </div>
